@@ -1,5 +1,13 @@
 2007-11-11  Stefan Kost  <ensonic@users.sf.net>
 
+	patch by: David Nečas <yeti@physics.muni.cz>
+
+	* gtk-doc.xsl:
+	* gtkdoc-mkdb.in:
+	  Avoid generated node ids. Fixes #365913.
+
+2007-11-11  Stefan Kost  <ensonic@users.sf.net>
+
 	* gtk-doc.xsl:
 	* gtkdoc-mkdb.in:
 	* style.css:
